# HAiO-solana-programs

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  program-metadata.json  security.txt  tsconfig.json
programs/create-ata/: Cargo.toml
programs/create-ata/src/: lib.rs
programs/daily-check-in/: Cargo.toml
programs/daily-check-in/src/: lib.rs
programs/early-access/: Cargo.toml
programs/early-access/src/: lib.rs
programs/transaction-gateway/: Cargo.toml
programs/transaction-gateway/src/: lib.rs
programs/withdraw-logger/: Cargo.toml
programs/withdraw-logger/src/: lib.rs
programs/withdrawal-logger/: Cargo.toml
programs/withdrawal-logger/src/: lib.rs
scripts/: generate_vanity_addresses.ts
tests/: create-ata.ts  daily-check-in.ts  devnet-users.json  early-access.ts  transaction-gateway.ts
