[package]
name = "create_ata"
version = "0.1.0"
edition = "2021"
description = "HAiO program for creating ATA and tracking user traction"
authors = ["CTO <cto@haio.fun>"]

[lib]
name = "create_ata"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
solana-security-txt = "1.1.1" 