[package]
name = "daily_check_in"
version = "0.1.0"
edition = "2021"
description = "HAiO program for daily check in"
authors = ["CTO <cto@haio.fun>"]

[lib]
name = "daily_check_in"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-security-txt = "1.1.1"