[package]
name = "early_access"
version = "0.1.0"
edition = "2021"
description = "A simple program for early access"
authors = ["CTO <cto@haiomusic.com>"]

[lib]
name = "early_access"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
sha2 = "0.10.8"
